--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "sass": "^1.89.2",
     "tiny-slider-react": "^0.5.7",
     "typed.js": "^2.1.0",
     "web-vitals": "^2.1.4"
@@ -45,7 +46,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
-    "node-sass": "^8.0.0",
     "postcss": "^8.4.36",
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.4.1"
